packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/valid/merge-multiple-files/duplicate-source-multiple-files/input-002.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if duplicate source definitions in multiple files are accepted.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes/>
    <sources>
      <source uri="/a/" description="a" date-acquired="20190101" version="1"/>
    </sources>
  </ontology>
</edxml>
